# Meltdown

./: .gitignore  LICENSE  README.md  Sujuzi(1).txt  arguments.md  commandoc.sh  commands.md  dist.py  flake.nix  keyboard.md  llama_reqs.txt  makedocs.sh  pyproject.toml  requirements.txt  run.sh  setup.py
meltdown/: app.py  argparser.py  args.py  argspec.py  autocomplete.py  autoscroll.py  book.py  bottom.py  buttonbox.py  changes.py  close.py  cmdspec.py  command_spec.py  commands.py  config.py  console.py  contrast_theme.py  count.sh  dark_theme.py  default_theme.py  delete.py  details.py  dialogs.py  display.py  emojis.py  entrybox.py  enums.py  filecontrol.py  filemanager.py  filepicker.py  files.py  find.py  findmanager.py  formats.py  framedata.py  gestures.py  harambe.py  high_contrast_theme.py  inputcontrol.py  itemops.py  (+50 more)
scripts/: add_llama.sh  add_llama_amd.sh  add_llama_amd_rocm.sh  check.sh  check_space.py  count.sh  format.sh  install.sh  makedocs.sh  search.sh  tag.py  venv.sh  venv_amd.sh  venv_llama_amd.sh
src/: action.py  actions.py  app.py  argparser.py  commands.py  config.py  frames.py  main.py  model.py  state.py  timeutils.py  utils.py  widgets.py  widgetutils.py
utils/: check_space.py
